tests/ui/coroutine/issue-48048.stderr
error[E0626]: borrow may still be in use when coroutine yields
  --> $DIR/issue-48048.rs:9:9
   |
LL |     #[coroutine] || {
   |                  -- within this coroutine
...
LL |         x.0({
   |         ^^^
LL |             yield;
   |             ----- possible yield occurs here
   |
help: add `static` to mark this coroutine as unmovable
   |
LL |     #[coroutine] static || {
   |                  ++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0626`.
